--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,8 @@
     "element-plus": "^2.10.1",
     "vue": "^3.2.37",
     "vue-chartjs": "^5.3.2",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.3",
